<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/login_page_wrap">
    <LinearLayout
        style="@style/login_background"
        android:background="@drawable/login_bg_mask"
        android:orientation="vertical">
        <ImageView 
            android:layout_gravity="center_horizontal" 
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.0dip" 
            android:src="@drawable/logo_h40"
            android:contentDescription="@string/app_name" />
        <FrameLayout 
            android:layout_gravity="center_horizontal" 
            android:paddingLeft="10.0dip" 
            android:paddingRight="10.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="44.0dip" 
            android:layout_marginTop="25.0dip">
          <EditText 
              android:id="@+id/emailAddress" 
              android:background="@drawable/login_input_top" 
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:hint="@string/emailaddress" 
              android:singleLine="true" 
              android:inputType="textEmailAddress" 
              android:imeOptions="actionGo" 
              style="@style/login_field" />
          <Button 
              android:layout_gravity="right|center" 
              android:id="@+id/clear_address" 
              android:visibility="invisible" 
              android:layout_width="20.0dip" 
              android:layout_height="20.0dip" 
              android:layout_marginRight="10.0dip" 
              style="@style/input_del" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="1dip" 
            android:layout_gravity="center_horizontal" 
            android:paddingLeft="10.0dip" 
            android:paddingRight="10.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="46.0dip">
          <EditText 
              android:gravity="center_vertical" 
              android:id="@+id/password" 
              android:background="@drawable/login_input_bot" 
              android:paddingBottom="4.0dip" 
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:hint="@string/emailpassword" 
              android:singleLine="true" 
              android:inputType="textPassword" 
              android:imeOptions="actionGo" 
              style="@style/login_field" />
          <Button 
              android:layout_gravity="right|center" 
              android:id="@+id/clear_password" 
              android:visibility="invisible" 
              android:layout_width="20.0dip" 
              android:layout_height="20.0dip" 
              android:layout_marginRight="10.0dip" 
              style="@style/input_del" />
        </FrameLayout>
        
        <FrameLayout
            android:layout_marginTop="1dip" 
            android:layout_gravity="center_horizontal" 
            android:paddingLeft="10.0dip" 
            android:paddingRight="10.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
          <CheckBox 
              android:id="@+id/remenberPassword"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/remenberPassword"/>
          <CheckBox 
              android:id="@+id/autoLogin"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/autoLogin"
              android:layout_marginLeft="100dip"/>
          </FrameLayout>
        
        <Button 
            android:id="@+id/login_btn" 
            android:layout_width="fill_parent" 
            android:layout_height="46.0dip" 
            android:layout_marginLeft="10.0dip" 
            android:layout_marginTop="15.0dip" 
            android:layout_marginRight="10.0dip" 
            android:text="@string/emaillogin" 
            style="@style/btn_login" />
  </LinearLayout>

</LinearLayout>
