<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="#297DC6">
        <Button 
            android:onClick="back"
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:background="@drawable/mm_title_btn_back"
            android:text="@string/back"
            android:textColor="#ffffff"/>
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/writer"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dip"/>
        <Button 
            android:id="@+id/send"
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:background="@drawable/mm_title_btn_right"
            android:text="@string/send"
            android:textColor="#ffffff"
            android:layout_marginLeft="20dip"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tv_t"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:textColor="#404040"/>
        <EditText
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dip"
            android:id="@+id/mail_to"
            android:layout_height="wrap_content"
            android:layout_width="170dip"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"/>
        <ImageButton
            android:id="@+id/add_lianxiren"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/add"/>
    </LinearLayout>
    <!-- 下滑虚线 -->
    <LinearLayout
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/xuxiang_style"/>
    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tv_f"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:textColor="#404040"/>
        <EditText
            android:layout_marginLeft="10dip"
            android:id="@+id/mail_from"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@drawable/xuxiang_style"/>
     <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tv_zhuti"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:textColor="#404040"/>
        <EditText
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dip"
            android:id="@+id/mail_topic"
            android:layout_height="wrap_content"
            android:layout_width="170dip"
            android:background="@android:color/transparent"/>
        <ImageButton
            android:id="@+id/add_att"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/attachment"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@drawable/xuxiang_style"/>
    <GridView
        android:layout_marginTop="10dip"
        android:id="@+id/pre_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:horizontalSpacing="0dip"
        android:numColumns="4">
        
    </GridView>
    <LinearLayout 
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/edit_style">
        <EditText
            android:layout_marginLeft="5dip"
            android:id="@+id/content"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:hint="@string/content"
            android:gravity="top|left"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>
