<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_title" 
       android:layout_height="50dip"
       android:layout_width="match_parent"
       android:background="#297DC6">
       <Button 
            android:id="@+id/btn_cancel"
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:background="@drawable/mm_title_btn_back"
            android:text="@string/back"
            android:textColor="#ffffff"/>
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/mail_content"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dip"/>
        <Button 
            android:id="@+id/btn_relay"
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:background="@drawable/mm_title_btn_right"
            android:text="@string/btn_replay"
            android:textColor="#ffffff"
            android:layout_marginLeft="40dip"/>
   </LinearLayout>

    <TextView
        android:id="@+id/tv_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ll_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dip"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/tv_mailsubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_addr"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dip"
        android:textSize="18sp"
        android:textIsSelectable="true" />

    <ListView
        android:id="@+id/lv_mailattachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_mailsubject"
        android:layout_margin="5dp"
        android:visibility="gone" />

    <WebView
        android:id="@+id/wv_mailcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lv_mailattachment"
        android:layout_margin="5dp"
        android:background="@color/pink"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_mailcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lv_mailattachment"
        android:layout_margin="5dp"
        android:ems="10"
        android:gravity="top"
        android:textIsSelectable="true" />

    <!-- <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:layout_marginLeft="10dip"
            android:id="@+id/btn_cancel"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" 
            android:background="@drawable/button_style"/>

        <Button
            android:layout_marginLeft="10dip"
            android:id="@+id/btn_relay"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:text="@string/btn_relay" 
            android:background="@drawable/button_style"/>
    </LinearLayout> -->

</RelativeLayout>